  categories.
* action=query&meta=filerepoinfo now returns additional information for each
  repo.
* EditPage::spamPage() was deprecated since 1.17 and has been removed.
* action=parse&prop=languageshtml was deprecated in 1.18 and will be removed in
  MediaWiki 1.24.
* action=parse now has disabletoc flag to disable table of contents in output.
* SpecialRecentChanges::feedSetup() was removed.

=== Languages updated in 1.23 ===

MediaWiki supports over 350 languages. Many localisations are updated
regularly. Below only new and removed languages are listed, as well as
changes to languages because of Bugzilla reports.

* Support was added for Northern Luri (lrc)

=== Other changes in 1.23 ===
* The rc_type field in the recentchanges table has been superseded by a new
  rc_source field.  The rc_source field is a string representation of the
  change type where rc_type was a numeric constant.  This field is not yet
  queried but will be in a future point release of 1.22.
** Utilize update.php to create and populate this new field.  On larger wiki's
   which do not wish to update recentchanges table in one large update please
   review the sql and comments in maintenance/archives/patch-rc_source.sql.
** The rc_type field of recentchanges will be deprecated in a future point
   release.
* The global variable $wgArticle has been removed after a lengthy deprecation.
* The global functions addButton and insertTags (for mw.toolbar.addButton and
  mw.toolbar.insertTags) now emits mw.log.warn when accessed.
* User::getPageRenderingHash() was deprecated since 1.17 and has been removed.
* The ExpandTemplates extension has been moved into MediaWiki core.
* (bug 52812) Removed "Disable search suggestions" from Preference.
* (bug 52809) Removed "Disable browser page caching" from Preference.

== Compatibility ==

MediaWiki 1.23 requires PHP 5.3.2 or later.

MySQL is the recommended DBMS. PostgreSQL or SQLite can also be used, but