@@ -1,0 +1,11 @@
+<?php
+class MockApiQueryBase extends ApiQueryBase {
+	public function execute() {
+	}
+
+	public function getVersion() {
+	}
+
+	public function __construct() {
+	}
+}
